[FIX] up arrow on top of X of sales pop on mobile

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -18690,33 +18690,6 @@ $icon-offset: 5px;
 /* ******************************
  :: 6.0 SCROLL TO TOP AREA CSS
  ****************************** */
-#scrollUp {
-  position: fixed;
-  right: 2%;
-  bottom: 3%;
-  height: 45px;
-  width: 40px;
-  border-radius: 4px;
-  background-color: rgba(35, 35, 35, 0.65);
-  text-align: center;
-  cursor: pointer;
-  z-index: 500;
-  display: none;
-  -webkit-transition: all 0.4s ease-in-out 0s;
-  transition: all 0.4s ease-in-out 0s;
-}
-
-#scrollUp > svg {
-  display: block;
-  height: 100%;
-  font-size: 22px;
-  color: #fff;
-  margin: 0 auto;
-}
-
-#scrollUp:hover {
-  background-color: #666;
-}
 
 /* ******************************
  :: 7.0 HEADER AREA CSS
@@ -20816,16 +20789,7 @@ $navbar-speed: 0.1s;
   }
 }
 
-#scrollUp {
-  display: block;
-  right: 0px;
-  bottom: 93px;
-  height: 40px;
-  width: 35px;
-}
-#scrollUp > svg {
-  font-size: 14px;
-}
+
 [data-toggle="collapse"]:after {
   transition: all 0.23s ease;
 }
