--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -33,22 +33,6 @@ html {
   }
 }
 
-#scrollUp {
-  display: block;
-  right: 0px;
-  bottom: 93px;
-  height: 40px;
-  width: 35px;
-}
-#scrollUp > svg {
-  font-size: 14px;
-}
-#scrollUp i {
-  color: white;
-  position: relative;
-  top: 9px;
-  font-size: 16px;
-}
 [data-toggle="collapse"]:after {
   transition: all 0.23s ease;
 }
